# agentic-rag

./: .gitignore  README.md  langgraph.json  pyproject.toml
demos/: autogen.py  crewai.py  haystack.py  langchain.py  langgraph.py  llamaindex_agent.py  llamaindex_rag.py  pydantic_ai.py  smolagents.py
misc/: __init__.py  dvts.py  optimizations.py  perplexity.py  rag.py
misc/evaluations/: __init__.py  ragas.py  test_deepeval.py
src/resume_agent/: __init__.py  agents.py  chains.py  config.py  main.py  tools.py
tests/: test_index_agent.py  test_langchain.py
