[project]
name = "agentic-rag"
version = "0.1.0"
description = "Playground for agents and RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.2.1",
    "crewai[tools]>=0.95.0",
    "faiss-cpu>=1.9.0.post1",
    "fastapi>=0.115.6",
    "langchain>=0.3.13",
    "langchain-community>=0.3.13",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.2.2",
    "langchain-text-splitters>=0.3.4",
    "langgraph>=0.2.60",
    "langgraph-cli[inmem]>=0.1.65",
    "llama-index>=0.12.8",
    "llama-index-core>=0.12.9",
    "llama-index-embeddings-huggingface>=0.4.0",
    "llama-index-llms-ollama>=0.5.0",
    "llama-index-readers-file>=0.4.1",
    "llama-index-retrievers-bm25>=0.5.0",
    "llama-index-vector-stores-faiss>=0.3.0",
    "llama-stack>=0.0.63",
    "pypdf>=5.1.0",
    "redis>=5.2.1",
    "sentence-transformers>=3.3.1",
    "smolagents>=1.1.0",
    "unstructured[pdf]>=0.16.12",
    "vllm>=0.6.0",
]
