[project]
name = "agentic-rag"
version = "0.1.0"
description = "Playground for agents and RAG"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.8.1",
    "autogen-agentchat>=0.6.4",
    "autogen-core>=0.6.4",
    "autogen-ext[docker,langchain,ollama,openai]>=0.6.4",
    "crewai[tools]>=0.141.0",
    "faiss-cpu>=1.11.0.post1",
    "fastapi>=0.116.1",
    "haystack-ai>=2.15.2",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.0",
    "langchain-ollama>=0.3.4",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.5.3",
    "langgraph-cli[inmem]>=0.3.4",
    "llama-index>=0.12.49",
    "llama-index-core>=0.12.49",
    "llama-index-embeddings-huggingface>=0.5.5",
    "llama-index-llms-ollama>=0.6.2",
    "llama-index-readers-file>=0.4.11",
    "llama-index-retrievers-bm25>=0.5.2",
    "llama-index-vector-stores-faiss>=0.4.0",
    "ollama-haystack>=3.4.0",
    "pypdf>=5.8.0",
    "redis>=6.2.0",
    "ragas>=0.2.15",
    "sentence-transformers>=5.0.0",
    "smolagents>=1.20.0",
    "unstructured[pdf]>=0.18.5",
    "deepeval>=3.2.6",
    "vllm>=0.6.0",
    "opencv-python-headless>=4.11.0.86",
]

[dependency-groups]
dev = ["pytest>=8.4.1", "ruff>=0.12.3"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "Q",        # flake8 quotes
    "I",        # isort
    "C90",      # {name} is too complex
    "RUF100",   # unused noqa (auto-fixable)
    "T20",      # print found
]
ignore = [
    "F821",     # undefined name
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
